NetBSD Problem Report #38009

From yamt@mwd.biglobe.ne.jp  Tue Feb 12 08:52:20 2008
Return-Path: <yamt@mwd.biglobe.ne.jp>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 061B863BD28
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 12 Feb 2008 08:52:20 +0000 (UTC)
Message-Id: <20080212085221.AAD3A11703@yamt.dyndns.org>
Date: Tue, 12 Feb 2008 17:52:21 +0900 (JST)
From: yamt@mwd.biglobe.ne.jp
Reply-To: yamt@mwd.biglobe.ne.jp
To: gnats-bugs@gnats.NetBSD.org
Subject: priority adjustment by _sched_setparam is not useful for SCHED_OTHER
X-Send-Pr-Version: 3.95

>Number:         38009
>Category:       kern
>Synopsis:       priority adjustment by _sched_setparam is not useful for SCHED_OTHER
>Confidential:   no
>Severity:       non-critical
>Priority:       high
>Responsible:    rmind
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Feb 12 08:55:00 +0000 2008
>Closed-Date:    Sat Oct 18 03:42:39 +0000 2008
>Last-Modified:  Sat Oct 18 03:45:01 +0000 2008
>Originator:     YAMAMOTO Takashi <yamt@mwd.biglobe.ne.jp>
>Release:        NetBSD 4.99.54
>Organization:

>Environment:


>Description:
	_sched_setparam modifies l_priority using the user-supplied value.
	however, for SCHED_OTHER, it will be overwritten soon by
	dynamic adjustments.
>How-To-Repeat:
>Fix:
	save the user-supplied value somewhere and use it to
	calculate effective priority.  (like solaris)

	or

	disallow user priority adjustments for SCHED_OTHER.  (like linux)

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->rmind
Responsible-Changed-By: rmind@narn.netbsd.org
Responsible-Changed-When: Thu, 14 Feb 2008 16:37:41 +0000
Responsible-Changed-Why:
Mine.


State-Changed-From-To: open->closed
State-Changed-By: rmind@NetBSD.org
State-Changed-When: Sat, 18 Oct 2008 03:42:39 +0000
State-Changed-Why:
Second option was committed.  Thanks!


From: Mindaugas Rasiukevicius <rmind@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/38009 CVS commit: src
Date: Sat, 18 Oct 2008 03:40:18 +0000 (UTC)

 Module Name:	src
 Committed By:	rmind
 Date:		Sat Oct 18 03:40:18 UTC 2008

 Modified Files:
 	src/sys/kern: sys_sched.c
 	src/usr.sbin/schedctl: schedctl.8 schedctl.c

 Log Message:
 Disallow user priority adjustments for SCHED_OTHER policy, simplify
 convert_pri().  Sync schedctl(8) with the change.  Closes PR/38009.


 To generate a diff of this commit:
 cvs rdiff -r1.28 -r1.29 src/sys/kern/sys_sched.c
 cvs rdiff -r1.8 -r1.9 src/usr.sbin/schedctl/schedctl.8
 cvs rdiff -r1.11 -r1.12 src/usr.sbin/schedctl/schedctl.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.