Disallow user priority adjustments for SCHED_OTHER policy, simplify convert_pri().  Sync schedctl(8) with the change.  Closes PR/38009.